# sigma-mcp-server

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/: copilot-instructions.md
scripts/: update_windows_event_index.py
sigma/mcp/: main.py
sigma/mcp/data/: windows_event_index.json
tests/: test_main.py
